* Breaking changes

  * Renamed plain warn -> warn_if to avoid conflict with Kernel.warn

* Enhancements

  * Proper unit tests
  * Added warn_if_nulls_except
  * Added warn_if_nonexistent_owner
  * Got rid of autoload