@@ -1,7 +1,7 @@
 module TableWarnings
   class Blank < Exclusive
     def message(column)
-      if column.null_count(conditions) > 0 or (column.string? and column.blank_count(conditions) > 0)
+      if column.nulls?(conditions) or (column.string? and column.blanks?(conditions))
         if conditions.empty?
           "There are blanks in the #{column.name.inspect} column."
         else
