@@ -12,7 +12,7 @@ module TableWarnings
     end
 
     def messages
-      if nonexistent_count > 0 or (not allow_null? and null_count > 0)
+      if nonexistent? or (not allow_null? and nulls?)
         if conditions.empty?
           "Foreign keys are nil and/or refer to nonexistent values in #{belongs_to_association_name.inspect}"
         else
@@ -29,26 +29,26 @@ module TableWarnings
 
     # select zip_codes.* from zip_codes left join egrid_subregions on `egrid_subregions`.`abbreviation` = zip_codes.`egrid_subregion_abbreviation` where `egrid_subregions`.`abbreviation` is null
     # t.project('COUNT(*)').join(a_t, Arel::Nodes::OuterJoin).on(a_t[assoc.association_primary_key].eq(t[assoc.foreign_key])).where(a_t[assoc.klass.primary_key].eq(nil))
-    def nonexistent_count
+    def nonexistent?
       assoc = table.reflect_on_association(belongs_to_association_name)
       relation = table.includes(assoc.name).where(
         table.arel_table[assoc.foreign_key].not_eq(nil).and(      # not this query's job
         assoc.klass.arel_table[assoc.klass.primary_key].eq(nil))  # columns in the right table are set to NULL if they don't exist
       )
       if conditions.empty?
-        relation.count
+        relation.count > 0
       else
-        relation.where(conditions).count
+        relation.where(conditions).count > 0
       end
     end
 
-    def null_count
+    def nulls?
       assoc = table.reflect_on_association(belongs_to_association_name)
       relation = table.where(assoc.foreign_key => nil)
       if conditions.empty?
-        relation.count
+        relation.count > 0
       else
-        relation.where(conditions).count
+        relation.where(conditions).count > 0
       end
     end
   end
